# tjson

./: Cargo.toml  README.md  labb.json  testrun.sh
src/: args.rs  httpclient.rs  json.rs  main.rs  tui.rs  ui.rs
