[package]
name = "tjson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = {version = "0.27.0", features = ["serde", "event-stream"]}
directories = "5.0.1"
eyre = "0.6.9"
futures = "0.3.29"
human-panic = "1.2.2"
lazy_static = "1.4.0"
log = "0.4.20"
ratatui = "0.24.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
signal-hook = "0.3.17"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
